--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/main.css">
 
- </head>
-<body>
-	<h1>I am here.</h1>
+</head>
+<body ng-app="Route-Routing">
+	<div class="row">
+    	<div class="col-xs-8 col-xs-offset-2" ng-view></div>
+  	</div>
+
 
 
 	<script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/angular/angular.min.js"></script>
-	<script type="text/javascript" src="./javascripts/main.js"></script>
+	<script type="text/javascript" src="./lib/bower_components/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="./javascripts/app.js"></script>
+	<script type="text/javascript" src="./javascripts/AppConfig.js"></script>
+	<script type="text/javascript" src="./javascripts/controllers/routeOneCtrl.js"></script>
+	<script type="text/javascript" src="./javascripts/controllers/routeTwoCtrl.js"></script>
 </body>
 </html>
