Completed nav bar for routes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
 </head>
 <body ng-app="Route-Routing">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Route-Routing</a>
+    </div>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#!/route/one">U.S. Route 66</a></li>
+        <li><a href="#!/route/two">Pennyrile Parkway</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	<div class="row">
     	<div class="col-xs-8 col-xs-offset-2" ng-view></div>
   	</div>
